@@ -38,7 +38,7 @@ class AddonContext(SingletonClass):
         self.turtle_addonPath = self.turtle_addon.getAddonInfo('path')
         self.turtle_addonProfile = self.turtle_addon.getAddonInfo('profile')
         
-        self.cache = StorageServer.StorageServer(addon_id, 12)
+        self.cache = StorageServer.StorageServer(addon_id, 2)
         self.turtle_map = self.cache.cacheFunction(self.loadTurtleMap)
         
     
