@@ -1,3 +1,6 @@
+[B]Version v0.3.5[/B]
+- YouTube video URL with embedded feature fixed.
+
 [B]Version v0.3.4[/B]
 - Making compatible with new Turtle version Google Analytics.
 
