@@ -1,3 +1,6 @@
+[B]Version v2.3.3[/B]
+- Added Turtle version.
+
 [B]Version v2.3.2[/B]
 - Hiverlogic Enkoder fix.
 - Making compatible with new Turtle version Google Analytics.
